Add SuddenrunPlaylistServiceCreatePlaylistIntegrationTest SuddenrunPlaylistServiceGetPlaylistIntegrationTest